add INFO flag in the example provided in the README